--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,9 +14,11 @@ Mako==1.3.8
 MarkupSafe==3.0.2
 marshmallow==3.25.1
 marshmallow-sqlalchemy==1.4.0
-psycopg2==2.9.9  # Biblioteca para PostgreSQL
 packaging==24.2
+psycopg2==2.9.9
+python-dotenv==1.0.1
 pytz==2024.2
+regex==2024.11.6
 setuptools==75.8.0
 six==1.17.0
 SQLAlchemy==2.0.37
