--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==10.0.0
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
+Flask-JWT-Extended==4.7.1
 flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
@@ -15,7 +16,9 @@ MarkupSafe==3.0.2
 marshmallow==3.25.1
 marshmallow-sqlalchemy==1.4.0
 packaging==24.2
+passlib==1.7.4
 psycopg2==2.9.9
+PyJWT==2.10.1
 python-dotenv==1.0.1
 pytz==2024.2
 regex==2024.11.6
