--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,11 @@ Flask==3.1.0
 Flask-JWT-Extended==4.7.1
 flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
 greenlet==3.1.1
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
@@ -16,8 +19,10 @@ marshmallow==3.25.1
 marshmallow-sqlalchemy==1.4.0
 packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 psycopg2==2.9.9
 PyJWT==2.10.1
+pytest==8.3.4
 python-dotenv==1.0.1
 pytz==2024.2
 regex==2024.11.6
