--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,8 @@ greenlet = "^3.1.1"
 jsonschema = "^4.23.0"
 werkzeug = "^3.1.3"
 wheel = "^0.45.1"
+flask-swagger-ui = "^4.11.1"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
