--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ werkzeug = "^3.1.3"
 wheel = "^0.45.1"
 flask-swagger-ui = "^4.11.1"
 pyyaml = "^6.0.2"
+flask-cors = "^5.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
