--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,7 @@ wheel = "^0.45.1"
 flask-swagger-ui = "^4.11.1"
 pyyaml = "^6.0.2"
 flask-cors = "^5.0.1"
+flet = "^0.27.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
